# Qt

BusinessCard/: CMakeLists.txt  Main.qml  main.cpp
Calculator/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
CalculatorQuick/: CMakeLists.txt  Main.qml  main.cpp
RichTextEditor/: CMakeLists.txt  finddialog.cpp  finddialog.h  finddialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  replacedialog.cpp  replacedialog.h  replacedialog.ui
SecurityPanel/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
TcpChatClient/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
TcpChatServer/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  server.cpp  server.h
TvRemoteControl/: CMakeLists.txt  Main.qml  main.cpp
